--- a/code/frontend/src/styles/global.css
+++ b/code/frontend/src/styles/global.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: inter;
-  src: url(../../public/fonts/Inter-VariableFont_slnt\wght.ttf);
+  src: url(../../public/fonts/Inter-VariableFont_slnt\,wght.ttf);
 }
 
 :root {
